--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,5 +24,5 @@ ringbuffer = ["array-ops"]
 typenum = "1.12.0"
 bitmaps = "2.1.0"
 array-ops = { version = "0.1.0", optional = true }
-refpool = { version = "0.4.3", optional = true }
+refpool = { git = "https://github.com/quarkqbe/refpool.git", optional = true }
 arbitrary = { version = "1.0.0", optional = true }
